--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trial Gooogle One</title>
     <!-- Đường dẫn đến các tệp CSS và JS của Bootstrap -->
     <link
