--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Xử lý Code Trial Google One">
     <title>Trial Gooogle One</title>
-    <link rel="favicon" href="https://www.google.com/favicon.ico">
+    <link rel="icon" href="https://www.google.com/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         #outputString[contentEditable="true"] {
