--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Xử lý Code Trial Google One">
-    <title>Trial Gooogle One</title>
+    <meta name="description" content="Trang web này được thiết kế để xử lý và thay thế các mã token Google One, giúp người dùng dễ dàng nhập token và nhận các gói dùng thử phù hợp (như 100GB, 200GB, 2TB hoặc 30TB). Người dùng có thể chọn cách thay thế mã và không cần tải lại trang để nhận kết quả. Giao diện trực quan, hỗ trợ xử lý mã tự động và cho phép mở liên kết trực tiếp từ kết quả đầu ra.">
+    <title>Google One Token Processor</title>
     <link rel="icon" href="https://www.google.com/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
@@ -42,12 +42,12 @@
 <body>
     <div class="container mt-5">
         <center>
-            <h2>Xử lý Code Trial Google One</h2>
+            <h2>Trial Gooogle One</h2>
         </center>
         <form method="post" action="">
             <div class="form-group">
                 <label for="inputString">
-                    <b>Nhập đoạn mã token:</b>
+                    <b>Dán đoạn mã token:</b>
                 </label>
                 <input type="text" class="form-control" id="inputString" name="inputString" oninput="processString()">
             </div>
