--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
     <div class="container mt-5">
         <center>
-            <h2>Trial Gooogle One</h2>
+            <h2>Google One Token Processor</h2>
         </center>
         <form method="post" action="">
             <div class="form-group">
