--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Trang web này được thiết kế để xử lý và thay thế các mã token Google One, giúp người dùng dễ dàng nhập token và nhận các gói dùng thử phù hợp (như 100GB, 200GB, 2TB hoặc 30TB). Người dùng có thể chọn cách thay thế mã và không cần tải lại trang để nhận kết quả. Giao diện trực quan, hỗ trợ xử lý mã tự động và cho phép mở liên kết trực tiếp từ kết quả đầu ra.">
+    <meta name="google-adsense-account" content="ca-pub-8179683794792849">
     <title>Google One Token Processor</title>
     <link rel="icon" href="https://www.google.com/favicon.ico">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
